--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0027)file:///C:/javap/exams.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-   <link rel="stylesheet" href="/index.css">  
+   <link rel="stylesheet" href="index.css">  
   <title>PAGE TITLE</title>
 </head>
   
