--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body id="body">
 <div class="div1">
    <div class="div11">
-       <img src="kiit.jpg" height="250px" width="350px">
+       <img src="kiit.jpg" alt="Silver jubilie" height="250px" width="350px">
  </div>  
    <div class="div12">
    <div class="h1">
@@ -16,11 +16,11 @@
    </div>
    </div> 
 <div class="div13">      
-<img src="ilovekiit.jpg" height="250px" width="350px">
+<img src="ilovekiit.jpg" alt="I love kiit" height="250px" width="350px">
 </div>
 <div class="div2">
    <div class="div21">
-<img src="body.jpg" height="250px" width="350px">
+<img src="body.jpg" alt="statue" height="250px" width="350px">
 </div> 
 <div class="div22">
 <marquee behavior="scroll" direction="left">WELCOME TO KIIT!!!</marquee> 
