--- a/Pagetitle.html
+++ b/Pagetitle.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0027)file:///C:/javap/exams.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
    <link rel="stylesheet" href="/exams.css">  
-  <title>PAGE TITLE</title>
+  <title>College Website</title>
 </head>
   
  <body id="body">
@@ -52,7 +52,7 @@ GENDER:<input type="radio">
 <td>IT</td>
 </tr>
 <tr>
-<td colspan="2">Mon-THU</td>
+<td>Mon-THU</td>
 <td>11am-4pm</td>
 <td>CIVIL</td>
 </tr>
